--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,9 @@
 name: quiz
+description: A quiz web server
 version: 0.0.1
-description: A simple console application.
-#dependencies:
-#  foo_bar: '>=1.0.0 <2.0.0'
+
+environment:
+  sdk: '>=1.20.0 <2.0.0'
+
+dependencies:
+  aqueduct: any
